tests/e2e/tab_error2.error
Error: syntax error in story at line 2, column 7

2|        a = "{}  "
              ^^^^^^

E0060: String templates can't be empty
